[package]
name = "tx_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { path = "../agave/sdk", version = "=2.1.7" }
solana-svm = { path = "../agave/svm", version = "=2.1.7" }
solana-program-runtime = { path = "../agave/program-runtime", version = "=2.1.7" }

solana-bpf-loader-program = { path = "../agave/programs/bpf_loader", version = "=2.1.7" }
solana-compute-budget-program = { path = "../agave/programs/compute-budget", version = "=2.1.7" }
solana-system-program = { path = "../agave/programs/system", version = "=2.1.7" }

solana-compute-budget = { path = "../agave/compute-budget", version = "=2.1.7" }
solana-feature-set = { path = "../agave/sdk/feature-set", version = "=2.1.7" }
solana-type-overrides = { path = "../agave/type-overrides", version = "=2.1.7" }
solana-svm-transaction = { path = "../agave/svm-transaction", version = "=2.1.7" }

serde = "1.0.213" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.15"
serde_derive = "1.0.213" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.132"
serde_with = { version = "3.11.0", default-features = false }
serde_yaml = "0.9.34"
bincode = "1.3.3"
test-case = "3.3.1"