[package]
name = "guest_zksvm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std', 'getrandom'] }
solana-sdk = { path = "../../../agave/sdk", version = "=2.1.0" }
solana-svm = { path = "../../../agave/svm", version = "=2.1.0" }
# solana-program-runtime = { path = "../../../agave/program-runtime", version = "=2.1.0" }

# solana-bpf-loader-program = { path = "../../../agave/programs/bpf_loader", version = "=2.1.0" }
# solana-compute-budget-program = { path = "../../../agave/programs/compute-budget", version = "=2.1.0" }
# solana-system-program = { path = "../../../agave/programs/system", version = "=2.1.0" }

solana-compute-budget = { path = "../../../agave/compute-budget", version = "=2.1.0" }
solana-feature-set = { path = "../../../agave/sdk/feature-set", version = "=2.1.0" }
solana-type-overrides = { path = "../../../agave/type-overrides", version = "=2.1.0" }
solana-svm-transaction = { path = "../../../agave/svm-transaction", version = "=2.1.0" }
# solana-svm-transaction = { path = "../../../agave-zkvm/svm-transaction", version = "=2.1.0" }

serde = "1.0.213" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.15"
serde_derive = "1.0.213" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.132"
serde_with = { version = "3.11.0", default-features = false }
bincode = "1.3.3"
test-case = "3.3.1"

# ZK-VM specific dependencies
ring = { path = "../../../ring" }
getrandom = { version = "0.1.16", features = ["dummy"] }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek.git", tag = "curve25519-4.1.2-risczero.0", default-features = false, version = "4.1.2", package = "curve25519-dalek" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2-v0-10-8 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0", package = "sha2" }
sha2-v0-9-9 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.9.9-risczero.0", package = "sha2" }